columnNames no longer shown in data